--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sen:wght@800&family=Source+Code+Pro:wght@900&display=swap');
 
+@keyframes scrolling {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 :root {
     --pink: #FC92C8;
     --fade-pink: #F3F0F7;
@@ -18,6 +27,8 @@ body {
     font-family: "Open Sans", sans-serif;
     color: var(--white);
     background-color: var(--dark);
+    overflow-x: hidden;
+    position: relative;
 }
 
 .sides {
@@ -165,7 +176,7 @@ body {
     font-family: "Source Code Pro";
 }
 .games > .title::after {
-    content: "LES JEUX";
+    content: attr(content);
     position: absolute;
     top: -10px;
     left: -10px;
@@ -222,8 +233,26 @@ body {
 a, a:visited {
     color: var(--blue);
 }
-
+.banner-teams {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: var(--dark);
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: #d9ff00;
+    width: 50%;
+    overflow: hidden;
+}
+.banner-teams > p {
+    animation: scrolling 10s linear infinite;
+    transform: translateX(100%);
+    white-space: nowrap;
+}
 @media screen and (max-width: 1270px) {
+    .banner-teams {
+        width: 100%;
+    }
     .alert-info {
         display: block;
     }
@@ -259,15 +288,62 @@ a, a:visited {
     .under-text {
         display: none;
     }
+    .games {
+        padding: 0;
+    }
     .games > .title {
-        font-size: 5rem;
-        width: 100%;
+        font-size: 3rem;
+        width: 100vw;
+        margin-bottom: 0;
     }
     .game:nth-child(odd), .game:nth-child(even) {
         flex-direction: column;
         width: 100vw;
+        max-width: 100%;
+    }
+    .game > img {
+        width: 100%;
+    }
+    .game > p {
+        font-size: 1rem;
     }
     .logo {
+        margin-top: 50px;
         width: 100vw;
+    }
+    .right-side > .sign-up-form {
+        margin-top: 5%;
+        width: 90%;
+    }
+
+    .games > hr {
+        width: 50vw;
+        margin-bottom: 10px;
+    }
+    
+    .sign-up-form p {
+        font-size: 1rem;
+        transform: skewX(0) translateX(0px);
+    }
+    
+    .sign-up-form fieldset {
+        display: flex;
+        border: none;
+        flex-direction: column;
+        padding: 0;
+    }
+    
+    .sign-up-form input {
+        height: 40px;
+        transform: skewX(0);
+        box-shadow: none;
+        border: none;
+        font-size: 1rem;
+    }
+    
+    .sign-up-form button {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
